k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-ghost-service
  namespace: ghost
spec:
  selector:
    app: personal-ghost
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 2368
