k8s/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-ghost
  namespace: ghost
  labels:
    app: personal-ghost
spec:
  replicas: 2
  selector:
    matchLabels:
      app: personal-ghost
  template:
    metadata:
      labels:
        app: personal-ghost
    spec:
      containers:
      - name: personal-ghost
        image: docker.pkg.github.com/justin-vanwinkle/ghost-website/ghost:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 2368
        readinessProbe:
          httpGet:
            path: /
            port: 2368
            httpHeaders:
            - name: X-Forwarded-Proto
              value: https
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 2368
            httpHeaders:
            - name: X-Forwarded-Proto
              value: https
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            memory: "300Mi"
            cpu: "300m"
          limits:
            memory: "600Mi"
            cpu: "600m"
        volumeMounts:
        - mountPath: /var/lib/ghost/content/images
          name: ghost-volume
        - mountPath: /var/lib/ghost/content/data
          name: ghost-volume
      volumes:
      - name: ghost-volume
        persistentVolumeClaim:
          claimName: pvc-ghost-personal
      restartPolicy: Always
      imagePullSecrets:
        - name: github-registry-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: personal-ghost-service
  namespace: ghost
spec:
  selector:
    app: personal-ghost
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 2368
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: personal-ghost-ingress
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    # nginx.ingress.kubernetes.io/proxy-body-size: 8m # use this when you need to upload a backup
spec:
  tls:
    - hosts:
        - personal-ghost-ingress.www.kubernet.dev
      secretName: kubernet-crt-secret
  rules:
  - host: www.kubernet.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: personal-ghost-service
          servicePort: http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: personal-ghost-ingress-wwwredir
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/configuration-snippet: "return 302 $scheme://www.kubernet.dev$request_uri;"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - personal-ghost-ingress-wwwredir.kubernet.dev
      secretName: kubernet-crt-secret
  rules:
  - host: kubernet.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: personal-ghost-service
          servicePort: http
